// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Movies 1`] = `
<div>
  <div
    class="colA"
  >
    <h2>
      Movies 
    </h2>
    <ul>
      <li>
        <span>
          Hello
        </span>
         
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-list "
          data-icon="list"
          data-prefix="fas"
          data-testid="context-menu-open"
          role="img"
          style="cursor: context-menu;"
          viewBox="0 0 512 512"
        >
          <path
            d="M40 48C26.7 48 16 58.7 16 72l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24L40 48zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L192 64zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zM16 232l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24zM40 368c-13.3 0-24 10.7-24 24l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0z"
            fill="currentColor"
          />
        </svg>
         
      </li>
    </ul>
  </div>
</div>
`;

exports[`NextEpisodeAirs > works 1`] = `
<div>
  <small>
    Episode 2 "EP2" airs on 24/04/2020
     
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-73o1y3-MuiTypography-root-MuiLink-root"
      data-discover="true"
      href="/select/10000/season/1/episode/2/options"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-magnifying-glass "
        data-icon="magnifying-glass"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
          fill="currentColor"
        />
      </svg>
    </a>
  </small>
  ,
</div>
`;

exports[`Progress > complex 1`] = `<div />`;

exports[`Progress > complex 2`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1txyin7-MuiLinearProgress-root"
    role="progressbar"
    title="50% (Unknown time remaining)"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
      style="transform: translateX(-50%);"
    />
  </span>
</div>
`;

exports[`Progress > complex 3`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="75"
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1txyin7-MuiLinearProgress-root"
    role="progressbar"
    title="75% (Unknown time remaining)"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
      style="transform: translateX(-25%);"
    />
  </span>
</div>
`;

exports[`Progress > simple 1`] = `<div />`;

exports[`Progress > simple 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-circle-check "
    data-icon="circle-check"
    data-prefix="fas"
    role="img"
    viewBox="0 0 512 512"
  >
    <path
      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zm84.4-299.3l-80 128c-4.2 6.7-11.4 10.9-19.3 11.3s-15.5-3.2-20.2-9.6l-48-64c-8-10.6-5.8-25.6 4.8-33.6s25.6-5.8 33.6 4.8l27 36 61.4-98.3c7-11.2 21.8-14.7 33.1-7.6s14.7 21.8 7.6 33.1z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`Progress > simple 3`] = `
<div>
  <span
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="50"
    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1txyin7-MuiLinearProgress-root"
    role="progressbar"
    title="50% (6 minutes remaining)"
  >
    <span
      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
      style="transform: translateX(-50%);"
    />
  </span>
</div>
`;

exports[`TVShows 1`] = `
<div>
  <div>
    <div
      class="colB"
    >
      <h2>
        TV Shows 
      </h2>
      <div>
        <h3>
          Title
           
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-list "
            data-icon="list"
            data-prefix="fas"
            data-testid="context-menu-open"
            role="img"
            style="cursor: context-menu;"
            viewBox="0 0 512 512"
          >
            <path
              d="M40 48C26.7 48 16 58.7 16 72l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24L40 48zM192 64c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32L192 64zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zm0 160c-17.7 0-32 14.3-32 32s14.3 32 32 32l288 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-288 0zM16 232l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0c-13.3 0-24 10.7-24 24zM40 368c-13.3 0-24 10.7-24 24l0 48c0 13.3 10.7 24 24 24l48 0c13.3 0 24-10.7 24-24l0-48c0-13.3-10.7-24-24-24l-48 0z"
              fill="currentColor"
            />
          </svg>
        </h3>
        <div
          class="Collapsible"
        >
          <span
            aria-controls="collapsible-content-tv-1-season-1"
            aria-disabled="false"
            aria-expanded="true"
            class="Collapsible__trigger is-open"
            id="collapsible-trigger-tv-1-season-1"
            role="button"
          >
            <h4>
              Season 
              1
               
               
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover css-73o1y3-MuiTypography-root-MuiLink-root"
                data-discover="true"
                href="/select/1/season/1"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-magnifying-glass "
                  data-icon="magnifying-glass"
                  data-prefix="fas"
                  role="img"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376C296.3 401.1 253.9 416 208 416 93.1 416 0 322.9 0 208S93.1 0 208 0 416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                    fill="currentColor"
                  />
                </svg>
              </a>
               
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-caret-up fa-2x "
                data-icon="caret-up"
                data-prefix="fas"
                role="img"
                style="transform-origin: 0.375em 0.625em; cursor: pointer;"
                viewBox="0 0 384 512"
              >
                <g
                  transform="translate(192 256)"
                >
                  <g
                    transform="translate(0, 64)  scale(1, 1)  rotate(0 0 0)"
                  >
                    <path
                      d="M32 352c-12.9 0-24.6-7.8-29.6-19.8S.2 306.5 9.4 297.4l160-160c12.5-12.5 32.8-12.5 45.3 0l160 160c9.2 9.2 11.9 22.9 6.9 34.9S364.9 352 352 352L32 352z"
                      fill="currentColor"
                      transform="translate(-192 -256)"
                    />
                  </g>
                </g>
              </svg>
            </h4>
          </span>
          <div
            aria-labelledby="collapsible-trigger-tv-1-season-1"
            class="Collapsible__contentOuter"
            id="collapsible-content-tv-1-season-1"
            role="region"
            style="height: auto; transition: none; overflow: hidden;"
          >
            <div
              class="Collapsible__contentInner"
            >
              <ol />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
